<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">应用中心</string>
    <string name="app_store_id">2014_01_01</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!-- soft update -->
    <string name="soft_update_title">New Version</string>
    <string name="soft_update_updatebtn">update now</string>
    <string name="soft_update_later">update later</string>
    <string name="soft_update_background">update in background</string>
    <string name="soft_no_update">no new version now</string>
    <string name="soft_update_message"><Data><![CDATA[ The lastest version is %1$s, the size is %2$s. The current version is %3$s.<br />update log : <br />]]> </Data></string>
    <string name="soft_start_down">start downloading</string>
    <string name="soft_download_error">soft download error</string>
    <string name="soft_no_sd">soft download error, no sdcard or sdcard is full.</string>
    <string name="soft_download">download</string>
    <string name="soft_stop_download">touch this to stop downloading.</string>
    <string name="msg_exist_toast">再按一次后退键退出程序</string>
    
    <string name="update_all">全部更新</string>
    <string name="view_ignore">查看忽略</string>
    <string name="ignore">忽略</string>
    <string name="back_update">返回可更新</string>
    <string name="new_version">新版：</string>
    <string name="comment_hint">发表对这款应用的看法</string>
    <string name="submit_after_comment">需评分后才能提交</string>
    <string name="comment_rating_not_null">请发表您的评分和评论</string>
    <string name="empty_string_update_unignore">暂无可升级的应用</string>
    <string name="empty_string_update_ignore">暂无已忽略更新的应用</string>
    <string name="empty_string_download">暂无内容显示</string>
    <string name="empty_string_install">暂时没有安装的应用</string>
    <string name="empty_string_comment">暂无相关评论</string>
    <string name="empty_string_search">抱歉，没有搜索到相关内容</string>
    <string name="empty_string">暂无内容</string>
    <string name="free_string">免费</string>
    <string name="language_simple_chinese">简体中文</string>
    
    <!-- Action Bar Msg -->
    <string name="action_label_search">Search</string>
    <string name="action_label_setting">Setting</string>
    <string name="action_label_setting_login">登录</string>
    <string name="action_label_menu_setting_abount">关于</string>
    <string name="action_label_menu_setting_update">检查更新</string>
    <string name="action_label_setting_feedback">反馈</string>
    <string name="action_label_setting_settings">设置</string>
    <string name="action_label_setting_exit">退出</string>
    <string name="app_version_code">版本号：</string>
    <string name="app_version_name">版本名称：</string>
    
    <!-- navigation bar -->
    <string name="home">首页</string>
    <string name="ranking">排行</string>
    <string name="category">分类</string>
    <string name="topic">专题</string>
    <string name="management">管理</string>
    <string name="well_selected">推荐</string>
    <string name="new_goods">新品</string>
    <string name="required_goods">必备</string>
    
    <string name="installed">已安装</string>
    <string name="install">安装</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="download">下载</string>
    <string name="pause">暂停</string>
    <string name="waiting">等待</string>
    <string name="go_continue">继续</string>
    <string name="version">版本</string>
    <string name="uninstall">卸载</string>
    <string name="can_update">可更新</string>
    
    <!-- software detail -->
    <string name="fees">费用:</string>
    <string name="language">语言:</string>
    <string name="release_date">上线时间:</string>
    <string name="developer">开发商:</string>
    <string name="advertise">广告:</string>
    <string name="score">积分:</string>
    <string name="genuine_certify">官方正版认证</string>
    <string name="permission">权限</string>
    <string name="share">分享</string>
    <string name="introduce">介绍</string>
    <string name="new_feature">新版特性</string>
    <string name="sw_snapshot">软件截图</string>
    <string name="onekey_report">一键举报</string>
    <string name="comment_marks">评论与评分</string>
    <string name="relative_software">下载此应用的用户还下载了</string>
    
    <!-- share -->
    <string name="share_to">分享到：</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="qqzone">QQ空间</string>
    
    <!-- comments -->
    <string name="add_comment">添加评论 ></string>
    <string name="dialog_software_comment_title">评论评分</string>
    <string name="already_commented">您已经评论过</string>
    <string name="comment_after_install">安装后才能评价</string>
    <string name="comment_after_update">更新后才能评价</string>
    <string name="comment">评价</string>
    <string name="average_marks">平均评分</string>
    <string name="five_star">5星</string>
    <string name="four_star">4星</string>
    <string name="three_star">3星</string>
    <string name="two_star">2星</string>
    <string name="one_star">1星</string>
    <string name="click_star_to_mark">点星星评分</string>
    <string name="pls_input_mark">发表对这款应用的看法</string>
    <string name="remark_app_success">评论成功</string>
    <string name="remark_app_failure">评论失败，请稍候重试</string>
    <string name="support">顶</string>
    <string name="disasupport">踩</string>
    <string name="support_ok">顶成功！</string>
    <string name="dissupport_ok">踩成功！</string>
    <string name="support_repeat">已经顶过或踩过！</string>
    <string name="dis_support_failed">踩或顶操作失败，请稍候重试</string>
    <string name="self_support_disable">不能对自己的评论进行顶或踩</string>
    <string name="all_comment">全部</string>
    <string name="current_comment">当前</string>
    <string name="more_comment">更多</string>
    <string name="people_comment">人评论</string>
    
    <string name="go_continue">继续</string>
    <string name="AlertText">温馨提示</string>
    <string name="str_retry">重 试</string>
    <string name="str_cancel">取 消</string>
    <string name="str_return">返 回</string>
    
    <string name="dialog_network_alarm_title">提示</string>
    <string name="dialog_software_update_title">软件更新</string>
    <string name="dialog_software_current_version">当前版本：</string>
    <string name="dialog_software_found_version">发现版本：</string>
    <string name="dialog_software_size">文件大小：</string>
    <string name="dialog_software_update_or_not">检测到新版本，是否升级？</string>
    <string name="dialog_software_latest_version">已经是最新版本。</string>
    <string name="str_ok">确 定</string>
    <string name="str_update">更新</string>
    <string name="str_update_later">暂不更新</string>
    <string name="str_sdcard_not_available">SD卡不可用</string>
    <string name="str_apk_download_failure">文件下载失败</string>
    <string name="cancel_download">取消下载</string>
    <string name="str_apk_downloading">下载中</string>
    <string name="activity_wait_info">加载中...</string>
    <string name="no_more_data">暂无内容</string>
    <string name="search_message_hint">搜索APP</string>
    <string name="search_activity_result">的搜索结果</string>
    <string name="dialog_network_wifi_on">您正在使用WIFI网络，</string>
    <string name="dialog_network_ethernet_on">您正在使用以太网连接，</string>
    <string name="dialog_network_3g_on">您正在使用3G网络，请开启WIFI下载节省流量，</string>
    <string name="dialog_network_not_available">亲，您还没有开启网络连接哦！</string>
    
    <string name="network_prompt_net">网络已连接</string>
    <string name="nonetwork_prompt_net">网络未连接</string>
    <string name="nonetwork_prompt_check">建议检查网络后，重试应用中心</string>
    <string name="nonetwork_prompt_server_error">服务器不可用，请稍后重试！</string>
    <string name="nonetwork_prompt_relink">点击屏幕尝试重新刷新</string>
    <string name="about_warn">申明：</string>
    <string name="about_warninfo">此版本适用于Android 4.0以上操作系统系列Pos机，对于在其他操作系统平台上使用本软件，出现的任何问题，我公司不承担责任。本软件的下载、安装完全免费，使用过程中产生的GRPS数据流量费用，由运营商收取。</string>
    <string name="about_link">《“应用中心”软件许可及服务协议》</string>
    <string name="about_link_http">https://aipstore.allinpay.com/asweb/agreement</string>
        
    <!-- ListView refresh -->
    <string name="appstore_list_header_hint_just_now">刚刚</string>
    <string name="appstore_list_header_hint_normal">下拉刷新</string>
    <string name="appstore_list_header_hint_ready">松开刷新数据</string>
    <string name="appstore_list_header_hint_loading">正在加载...</string>
    <string name="appstore_list_header_last_time">上次更新时间：</string>
    <string name="appstore_list_footer_hint_normal">查看更多</string>
    <string name="appstore_list_footer_hint_ready">松开载入更多</string>
    
    <!-- msg for third part interfaces -->
    <string name="msg_argument_error">传递参数错误</string>
    <string name="promotions_resources_not_exist">资源不存在，请稍候重试</string>
    <string name="msg_pos_forbiden">机具非法，请注册后重试。</string>
    
    <!-- setting message -->
    <string name="msg_setting_app_setting_title">应用设置</string>
    <string name="msg_setting_install_delete_apk">安装完成后自动删除安装文件</string>
    <string name="msg_setting_install_push_switch">推送通知</string>
    <string name="msg_setting_download_title">下载设置</string>
    <string name="msg_setting_download_in_wifi">只在Wifi网络环境中下载</string>
    <string name="msg_setting_download_clear_SDCard">清除SD卡下载缓存</string>
    <string name="msg_setting_clear_SDCard_success">清除SD卡缓存成功</string>
    <string name="msg_setting_download_clear_internal_cache">清除内部缓存</string>
    <string name="msg_setting_clear_internal_cache_success">清除内部缓存成功</string>
    
    <!-- notification promotion -->
    <string name="notification_trans_param_format_error">推送消息格式错误</string>
    
</resources>