<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remark_layout"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@color/alertdailog_background_color"
    android:orientation="vertical"
    android:padding="0.0px" >

    <include layout="@layout/dialog_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical" >

        <RatingBar
            android:id="@+id/edit_ratingBar"
            style="@style/EditRatingBar_modi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0px"
            android:layout_marginTop="30.0px"
            android:background="@drawable/trans"
            android:numStars="5"
            android:rating="1.0"
            android:stepSize="1.0" />

        <TextView
            android:id="@+id/mark_star_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0px"
            android:gravity="center"
            android:text="@string/click_star_to_mark"
            android:textColor="@color/detail_mark_star_text"
            android:textSize="18.0px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15.0px"
        android:layout_marginRight="15.0px" >

        <EditText
            android:id="@+id/sw_mark_edit"
            android:layout_width="530.0px"
            android:layout_height="wrap_content"
            android:layout_margin="3.0px"
            android:background="@drawable/comment_edit_bg"
            android:gravity="left|center"
            android:hint="@string/pls_input_mark"
            android:maxHeight="150.0px"
            android:maxLength="255"
            android:minHeight="60.0px"
            android:paddingLeft="5.0px"
            android:paddingRight="5.0px"
            android:textColor="@color/detail_mark_star_text"
            android:textColorHint="@color/detail_mark_star_text"
            android:textSize="20.0px" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/msg_block"
        android:layout_width="wrap_content"
        android:layout_height="50.0px"
        android:layout_margin="10.0px"
        android:gravity="left|center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/icon_for_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15.0px"
            android:src="@drawable/jingao" />

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel"
            android:textColor="#ff2790d4"
            android:textSize="20.0px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15.0px"
        android:layout_marginTop="25.0px" >

        <Button
            android:id="@+id/ok"
            android:layout_width="257.0px"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ok"
            android:text="@string/str_ok"
            android:textColor="@color/share_text_color"
            android:textSize="18.0px" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="257.0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:background="@drawable/btn_ok"
            android:text="@string/str_cancel"
            android:textColor="@color/share_text_color"
            android:textSize="18.0px" />
    </LinearLayout>

</LinearLayout>